tests/compile-fail/invalid_datetime.stderr
error: invalid component: ordinal was 0
 --> $DIR/invalid_datetime.rs:4:30
  |
4 |     let _ = datetime!(2021 - 000 0:00);
  |                              ^^^

error: invalid component: hour was 24
 --> $DIR/invalid_datetime.rs:5:34
  |
5 |     let _ = datetime!(2021 - 001 24:00);
  |                                  ^^

error: unexpected token: 0
 --> $DIR/invalid_datetime.rs:6:39
  |
6 |     let _ = datetime!(2021 - 001 0:00 0);
  |                                       ^

error: unexpected token: x
 --> $DIR/invalid_datetime.rs:7:43
  |
7 |     let _ = datetime!(2021 - 001 0:00 UTC x);
  |                                           ^
